<resources>
    <string name="app_name">用户模块</string>

    <string name="host_name">KJWanAndroid</string>
    <string name="sign_up">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="password">密码</string>
    <string name="user_name">用户名</string>
    <string name="login">登录</string>
    <string name="exit">退出登录</string>
    <string name="about">关于项目</string>
</resources>
